test/corpus/01-lexical.txt
==================
Line comment is ignored
==================

// hi
def X;

---

(source_file
  (line_comment)
  (def_definition
    (object_name
      (identifier))
    (body)))

==================
Block comment is ignored
==================

/* outer */
def X;

---

(source_file
  (block_comment)
  (def_definition
    (object_name
      (identifier))
    (body)))

==================
Nested block comment (ProgRef permits)
==================

/* outer /* inner */ outer */
def X;

---

(source_file
  (block_comment)
  (def_definition
    (object_name
      (identifier))
    (body)))

==================
Decimal hex binary integer literals
==================

def X { int a = 42; int b = 0xFF; int c = 0b1010; int d = -7; int e = +3; }

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body
      (field_declaration
        (type)
        (identifier)
        (integer_literal))
      (field_declaration
        (type)
        (identifier)
        (integer_literal))
      (field_declaration
        (type)
        (identifier)
        (integer_literal))
      (field_declaration
        (type)
        (identifier)
        (integer_literal))
      (field_declaration
        (type)
        (identifier)
        (integer_literal)))))

==================
String literal with escapes
==================

def X { string s = "a\nb"; }

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence))))))

==================
String literal exposes every escape variant
==================

def X {
  string a = "plain text";
  string b = "with\nnewline";
  string c = "with\tquote";
  string d = "with\"dquote";
  string e = "with\\backslash";
  string f = "with\'apostrophe";
  string g = "mixed \n and \t and \" pieces";
  string h = "trailing escape\n";
}

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body
      (field_declaration
        (type)
        (identifier)
        (string_literal))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)))
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence))))))

==================
Adjacent string atoms still concatenate across lines
==================

def X {
  string s = "first part\n"
             "second\tpart";
}

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body
      (field_declaration
        (type)
        (identifier)
        (string_literal
          (escape_sequence)
          (escape_sequence))))))

==================
Boolean and unset literals
==================

def X { bit a = true; bit b = false; bit c = ?; }

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body
      (field_declaration
        (type)
        (identifier)
        (boolean_literal))
      (field_declaration
        (type)
        (identifier)
        (boolean_literal))
      (field_declaration
        (type)
        (identifier)
        (unset_value)))))

==================
Identifier with leading digit
==================

def 3rdX;

---

(source_file
  (def_definition
    (object_name
      (identifier))
    (body)))
